# formulario

./: pyproject.toml
formulario/: settings.py  urls.py
formulario/static/css/: form.css  home.css  index.css  sucesso.css  view.css
formularioContratacao/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
formularioContratacao/migrations/: 0001_initial.py  0002_alter_contratacao_linkdlen_alter_contratacao_rg_cpf.py  0002_contratacao_load.py  0003_alter_contratacao_datanascimento_and_more.py
formularioContratacao/templates/: form.html  index.html  sucesso.html  view.html
