[tool.poetry]
name = "formulario"
version = "0.1.0"
description = ""
authors = ["andre <andregranemann@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Django = "^4.0"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
